# memcrabd

./: Cargo.toml  TODO.md
src/: args.rs  daemon.rs  lib.rs  log.rs  main.rs
src/protocol/: text.rs
src/server/: bind.rs  command.rs  connection.rs  conns.rs  frame.rs  mod.rs  port.rs
src/store/: item.rs  mod.rs
tests/: bind.rs  create_unix_socket.rs  get_listeners.rs  item_size.rs  store.rs
tests/common/: mod.rs
